# arm-next

./: .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.changeset/: config.json  crisp-socks-guess.md
.github/workflows/: release.yml
examples/minimal/: next.config.ts  package.json
examples/minimal/src/: proxy.ts
examples/minimal/src/app/: layout.tsx  page.tsx
examples/minimal/src/app/api/ai/markdown/: route.ts
examples/minimal/src/app/api/ai/markdown-edge/: route.ts
examples/minimal/src/app/docs/: page.tsx
native/crates/arm-next-core/: Cargo.toml
native/crates/arm-next-core/src/: lib.rs
native/crates/arm-next-node/: napi.config.json
native/crates/arm-next-wasm/: Cargo.toml
native/crates/arm-next-wasm/src/: lib.rs
scripts/: postbuild.mjs
src/: proxy.ts
src/next/: with-arm-next.ts
src/routes/: markdown-edge.ts
