[package]
name = "arm-next-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "arm_next_wasm"

[dependencies]
arm-next-core = { path = "../arm-next-core", default-features = false, features = [] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
